--- a/QA.html
+++ b/QA.html
@@ -9,15 +9,6 @@
     <link rel="stylesheet" href="css/common.css">
     <link rel="stylesheet" href="css/grid.css">
     <link rel="stylesheet" href="css/QA.css">
-    <style>
-    .open{
-        display: block;
-        padding-bottom: 20px; 
-    }
-    .rotate{
-        transform: rotate(45deg);
-    }
-    </style>
 </head>
 <body>
     <header id="header"><a href="index.html"><img src="logo/logo.png" alt="logo"></a></header>
@@ -66,48 +57,82 @@
         <div class="cloudtitle"><h2>關於牧場</h2></div>
         <ul>
             <li class="libar">
-                <h3><i class="fa-brands fa-quora"></i>營業時間為何?</h3>
+                <div class="ques quesclose">
+                <i class="fa-brands fa-quora"></i>
+                <h3>營業時間為何？</h3>
                 <i class="fa-solid fa-circle-plus"></i>
-                <p class="ans"><i class="fa-solid fa-font"></i>營業時間 : 08:00~17:00</p>
+                </div>
+                <div class="ans">
+                <p>營業時間 : 08:00~17:00</p>
+                </div>
             </li>
             <li class="libar">
-                <h3><i class="fa-brands fa-quora"></i>牧場如何抵達?</h3>
+                <div class="ques quesclose">
+                <i class="fa-brands fa-quora"></i>
+                <h3>牧場如何抵達？</h3>
                 <i class="fa-solid fa-circle-plus"></i>
-                <p class="ans"><i class="fa-solid fa-font"></i>
-                駕車前往：<br>在國道一號中壢出口下，沿桃桃路直行便可以抵達。<br>
+                </div>
+                <div class="ans">
+                <p>駕車前往：<br>在國道一號中壢出口下，沿桃桃路直行便可以抵達。<br>
                 公共交通工具：<br>
                 乘坐火車並在中壢火車站下車，在火車站後門轉乘44號公車至羊桃觀光牧場站下車。</p>
+                </div>
             </li>
             <li class="libar">
-                <h3><i class="fa-brands fa-quora"></i>園區有那些牧場動物？</h3>
+                <div class="ques quesclose">
+                <i class="fa-brands fa-quora"></i>
+                <h3>園區有那些牧場動物？</h3>
                 <i class="fa-solid fa-circle-plus"></i>
-                <p class="ans"><i class="fa-solid fa-font"></i>本園區為羊主題牧場，飼有綿羊、山羊。</p>
+                </div>
+                <div class="ans">
+                <p>本園區為羊主題牧場，飼有綿羊、山羊。</p>
+                </div>
             </li>
-           <li class="libar">
-                <h3><i class="fa-brands fa-quora"></i>我可以購買到牧場產品嗎？</h3>
+            <li class="libar">
+                <div class="ques quesclose">
+                <i class="fa-brands fa-quora"></i>
+                <h3>我可以購買到牧場產品嗎？</h3>
                 <i class="fa-solid fa-circle-plus"></i>
-                <p class="ans"><i class="fa-solid fa-font"></i>牧場出售許多牧場產品詳見<a href="shop.html">小農產品</a>。</p>
+                </div>
+                <div class="ans">
+                <p>牧場出售許多牧場產品詳見<a href="shop.html">小農產品</a>。</p>
+                </div>
             </li>
         </ul>
     </section>
     <section id="act">
         <div class="cloudtitle"><h2>關於活動</h2></div>
         <ul>
-            <li class="libar">   
-                <h3><i class="fa-brands fa-quora"></i>門票是否包含活動費用?</h3>
+            <li class="libar">
+                <div class="ques quesclose">
+                <i class="fa-brands fa-quora"></i>
+                <h3>門票是否包含活動費用？</h3>
                 <i class="fa-solid fa-circle-plus"></i>
-                <p class="ans"><i class="fa-solid fa-font"></i>有些活動需酌收材料費詳見<a href="activity.html">牧場體驗</a>。</p>
+                </div>
+                <div class="ans">
+                <p>有些活動需酌收材料費詳見<a href="activity.html">牧場體驗</a>。</p>
+                </div>
             </li>
             <li class="libar">
-                <h3><i class="fa-brands fa-quora"></i>牧場如何確保動物福利？</h3>
+                <div class="ques quesclose">
+                <i class="fa-brands fa-quora"></i>
+                <h3>牧場如何確保動物福利？</h3>
                 <i class="fa-solid fa-circle-plus"></i>
-                <p class="ans"><i class="fa-solid fa-font"></i>負責任的牧場重視動物福利，提供適當的食物、飲水、棲息地和醫療照護。它們確保動物能夠表現其自然行為，並避免不必要的壓力和痛苦。</p>
+                </div>
+                <div class="ans">
+                <p>負責任的牧場重視動物福利，提供適當的食物、飲水、棲息地和醫療照護。它們確保動物能夠表現其自然行為，並避免不必要的壓力和痛苦。</p>
+                </div>
             </li>
             <li class="libar">
-                <h3><i class="fa-brands fa-quora"></i>我可以在牧場舉辦特殊活動或派對嗎？</h3>
+                <div class="ques quesclose">
+                <i class="fa-brands fa-quora"></i>
+                <h3>我可以在牧場舉辦特殊活動或派對嗎？</h3>
                 <i class="fa-solid fa-circle-plus"></i>
-                <p class="ans"><i class="fa-solid fa-font"></i>一些牧場提供場地租借服務，你可以在牧場舉辦特殊活動或派對，如生日派對、團隊建設活動、婚禮等。聯繫牧場以瞭解場地租借和相關安排的詳細資訊。</p>
-            </li>   
+                </div>
+                <div class="ans">
+                <p>一些牧場提供場地租借服務，你可以在牧場舉辦特殊活動或派對，如生日派對、團隊建設活動、婚禮等。聯繫牧場以瞭解場地租借和相關安排的詳細資訊。</p>
+                </div>
+            </li>
         </ul>
     </section>
     <section id="letter">
@@ -162,7 +187,7 @@
         <p>本網站為緯育TibaMe【第85期】前端工程師專業技術養成班學員作品,僅供學習、展示之用途。</p>
     </footer>
     <script>
-    var libar = document.querySelectorAll(".libar");
+    var ques = document.querySelectorAll(".ques");
     var ans = document.querySelectorAll(".ans");
     var plus= document.querySelectorAll(".fa-circle-plus");
 
@@ -170,11 +195,12 @@
     return ()=>{
     ans[i].classList.toggle("open");
     plus[i].classList.toggle("rotate");
+    ques[i].classList.toggle("quesopen");
     };
     }
 
-    for (var i = 0; i < libar.length; i++) {
-     libar[i].addEventListener("click", whichbar(i), false);
+    for (var i = 0; i < ques.length; i++) {
+     ques[i].addEventListener("click", whichbar(i), false);
     }
 
     </script>
