--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>羊桃觀光牧場|首頁</title>
-    <link rel="icon" href="logo\icon.png">
+    <link rel="icon" href="logo/icon.png">
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/common.css">
     <link rel="stylesheet" href="css/index.css">
@@ -85,16 +85,17 @@
     <main>
         <div class="sum">
             <div class="item">
-                <p>導覽</p>
-                <a href=""><img src="ready/26846264_s.jpg"></a>
+                <a href=""><p>導覽</p>
+                    <span><img src="ready/26846264_s.jpg"></span>
+                </a>
             </div>
             <div class="item">
-                <p>體驗</p>
-                <a href=""><img src="ready/play.jpg"></a>
+                <a href=""><p>體驗</p>
+                <span><img src="ready/play.jpg"></span></a>
             </div>
             <div class="item">
-                <p>購物</p>
-                <a href=""><img src="p/milk.jpg"></a>
+                <a href=""><p>購物</p>
+                    <span><img src="p/milk.jpg"></span></a>
             </div>
         </div>
         
@@ -153,19 +154,16 @@
         <div class="shop" id="shop">
             <div class="sum">
                 <div class="item">
-                    <p>純乳</p>
-                    <a href=""><img src="p/milk.jpg"></a>
-                    <h3>純乳系列</h3>
+                    <a href=""><p>純乳</p>
+                    <span><img src="p/milk.jpg"></span></a>
                 </div>
                 <div class="item">
-                    <p>零食</p>
-                    <a href=""><img src="p\23955063_s.jpg"></a>
-                    <h3>常溫零食</h3>
+                    <a href=""><p>零食</p>
+                    <span><img src="p\23955063_s.jpg"></span></a>
                 </div>
                 <div class="item">
-                    <p>文創</p>
-                    <a href=""><img src="p\24846460_s.jpg"></a>
-                    <h3>文創商品</h3>
+                    <a href=""><p>文創</p>
+                    <span><img src="p\24846460_s.jpg"></span></a>
                 </div>
             </div>
             <div class="more btnchangecolor">
