--- a/monav.html
+++ b/monav.html
@@ -69,7 +69,7 @@
     }
     .momenu.active li{
         transition: .6s;
-        transform:scale(1) rotate(calc(360deg/6 * var(--i))); 
+       transform:scale(1) rotate(calc(360deg/6 * var(--i))); 
     }
 
     </style>
@@ -95,5 +95,41 @@
     // function move(){
     //     momenu.style.transform = `translate(${-(window.innerWidth)/2}px, ${-(window.innerHeight )/2}px)`
     // }
+    
+// opennav.addEventListener("click", function(event) {
+
+//     event.stopPropagation();
+//     monavbar.classList.add('small');
+//     setTimeout(() => {
+//     liElements.forEach(liElement => {
+//         liElement.style.opacity = '1';
+//     });    
+//     monav.classList.add('open');
+//     momenu.classList.add('active');    
+//     },300)
+// });
+
+// monav.addEventListener("click", function() {
+//     momenu.classList.remove('active');
+//     setTimeout(() => {
+//         monav.classList.remove('open');
+//         monavbar.classList.remove('small');
+//         liElements.forEach(liElement => {
+//             liElement.style.opacity = '0';
+//         });
+//     }, 800);
+// });
+
+// close.addEventListener("click",()=>{
+//     momenu.classList.remove('active');
+//     setTimeout(() => {
+//         monav.classList.remove('open');
+//         monavbar.classList.remove('small');
+//         liElements.forEach(liElement => {
+//             liElement.style.opacity = '0';
+//         });
+//     }, 800);
+        
+// })
 </script>
 </html>
