--- a/about.html
+++ b/about.html
@@ -103,7 +103,7 @@
             <label for="cheese" class="btnchangecolor"><span class="btnchangecolortxt" href=""><i class="fa-solid fa-cheese"></i>起司研究室</span></label>
             <label for="bq" class="btnchangecolor"><span class="btnchangecolortxt" href=""><i class="fa-solid fa-campground"></i>烤肉帳篷</span></label>
             <label for="market" class="btnchangecolor"><span class="btnchangecolortxt" href=""><i class="fa-solid fa-store"></i>小農市集</span></label>
-            <label for="center" class="btnchangecolor"><span class="btnchangecolortxt" href=""><i class="fa-solid fa-circle-question"></i>遊客服務中心</span></label>
+            <label for="center" class="btnchangecolor"><span class="btnchangecolortxt" href=""><i class="fa-solid fa-circle-question"></i>遊客中心</span></label>
         </div>
         <div class="pin">
             <img src="map\map.png" alt="">
