--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
         </ul> 
     </nav>   
     <div class="monav">
-        <div class="momenu">
+        <div class="momenu" id="momenu">
             <div class="center">
             <a href="index.html" ><img src="logo/logo.png" alt="logo" id="monavlogo"></a></div>
             <li style="--i:0;" id="close"><i class="fa-solid fa-circle-xmark"></i></li>
@@ -255,7 +255,7 @@
         </div>
         <p>本網站為緯育TibaMe【第85期】前端工程師專業技術養成班學員作品,僅供學習、展示之用途。</p>
     </footer>
-    <script src="js/common.js"></script>
+    <script src="js/common.js" defer="defer"></script>
     <script>
     let paralogo = document.getElementById('paralogo');
     let floor = document.getElementById('floor');
