--- a/about.html
+++ b/about.html
@@ -57,7 +57,7 @@
     </div>
     <main>
     <div class="cloudtitle" id="price"><h2>門票價錢</h2></div>
-    <div class="price col-10" >
+    <div class="price" >
         <table>
             <thead>
                 <th>價目表</th>
@@ -81,20 +81,20 @@
                 <td>65歲長者及身障者</td>
             </tr>
         </table>
-        <table>
+        <table class="car">
             <thead>
                 <th colspan="5"> </th>
             </thead>
             <tr>
                 <td><i class="fa-solid fa-square-parking"></i></td>
                 <td>停車費</td>
-                <td colspan="2"><i class="fa-solid fa-car-side"></i>汽車 50</td>
+                <td><i class="fa-solid fa-car-side"></i>汽車 50</td>
                 <td><i class="fa-solid fa-motorcycle"></i>機車 30</td>
             </tr>
         </table>
     </div>
     <div class="cloudtitle" id="map"><h2>園區導覽</h2></div>
-    <div class="map col-12">
+    <div class="map">
         <div class="btngroup">
             <label class="btnchangecolor" for="ground"><span class="btnchangecolortxt" ><i class="fa-solid fa-flag"></i>羊羊廣場</span></label>
             <label for="house" class="btnchangecolor"><span class="btnchangecolortxt" href=""><i class="fa-solid fa-house"></i>山羊羊舍</span></label>
@@ -118,7 +118,7 @@
         </div>
     </div>
     <div class="cloudtitle" id="history"><h2>園區沿革</h2></div>
-    <div class="history col-10">
+    <!-- <div class="history col-10">
         <div class="block ">
             <img class="logo" src="logo\logorow.png" alt="">
             <img class="col-12" src="animal/78414_m.jpg">
@@ -142,7 +142,7 @@
                 <p>加入我們，開啟一段與動物、大自然和自己連結的奇妙旅程。<br>我們引以為傲的小農產品，結合了自然的恩賜和可追溯的品質。<br>每一口都蘊含堅守初衷的承諾。</p>
             </div>
         </div>
-    </div>
+    </div> -->
     <div class="cloudtitle" id="story"><h2>牧場的一天</h2></div>
     <div class="story col-10" id="story">
         <div class="time col-3">
