--- a/index.html
+++ b/index.html
@@ -68,11 +68,11 @@
             <div class="center">
             <a href="index.html" ><img src="logo/logo.png" alt="logo" id="monavlogo"></a></div>
             <li style="--i:0;" id="close"><i class="fa-solid fa-circle-xmark"></i></li>
-            <li style="--i:1;"><a href=""><i class="fa-regular fa-newspaper"></i><p>最新消息</p></a></li>
-            <li style="--i:2;"><a href=""><i class="fa-solid fa-map-location-dot"></i><p>園區導覽</p></a></li>
-            <li style="--i:3;"><a href=""><i class="fa-solid fa-cow"></i><p>牧場體驗</p></a></li>
-            <li style="--i:4;"><a href=""><i class="fa-solid fa-store"></i><p>小農產品</p></a></li>
-            <li style="--i:5;"><a href=""><i class="fa-regular fa-circle-question"></i><p>常見問題</p></a></li>
+            <li style="--i:1;"><a href="new.html"><i class="fa-regular fa-newspaper"></i><p>最新消息</p></a></li>
+            <li style="--i:2;"><a href="about.html"><i class="fa-solid fa-map-location-dot"></i><p>園區導覽</p></a></li>
+            <li style="--i:3;"><a href="activity.html"><i class="fa-solid fa-cow"></i><p>牧場體驗</p></a></li>
+            <li style="--i:4;"><a href="shop.html"><i class="fa-solid fa-store"></i><p>小農產品</p></a></li>
+            <li style="--i:5;"><a href="QA.html"><i class="fa-regular fa-circle-question"></i><p>常見問題</p></a></li>
         </div>
         <div class="monavbar">
             <i class="fa-solid fa-bars" id="opennav"></i>
