--- a/detail.html
+++ b/detail.html
@@ -42,23 +42,42 @@
             <li class="list"><a href="">登入</a></li>
         </ul>
     </nav>
+    <div class="monav">
+        <div class="momenu" id="momenu">
+            <div class="center">
+            <a href="index.html" ><img src="logo/logo.png" alt="logo" id="monavlogo"></a></div>
+            <li style="--i:0;" id="close"><i class="fa-solid fa-circle-xmark"></i></li>
+            <li style="--i:1;"><a href="new.html"><i class="fa-regular fa-newspaper"></i><p>最新消息</p></a></li>
+            <li style="--i:2;"><a href="about.html"><i class="fa-solid fa-map-location-dot"></i><p>園區導覽</p></a></li>
+            <li style="--i:3;"><a href="activity.html"><i class="fa-solid fa-cow"></i><p>牧場體驗</p></a></li>
+            <li style="--i:4;"><a href="shop.html"><i class="fa-solid fa-store"></i><p>小農產品</p></a></li>
+            <li style="--i:5;"><a href="QA.html"><i class="fa-regular fa-circle-question"></i><p>常見問題</p></a></li>
+        </div>
+        <div class="monavbar">
+            <i class="fa-solid fa-bars" id="opennav"></i>
+            <a href=""><i class="fa-solid fa-user"></i></a>
+            <a href=""><i class="fa-solid fa-cart-shopping"></i></a>   
+        </div>
+    </div>
     <div class="pagebar">
         <img src="bar\milkbar1.png" alt="milkshop">
         <h1 class="pagetitle">純乳系列</h1>
     </div>
-    <section class="col-10">
+    <section>
         <div class="breadcrumb">
             <a href="shop.html">小農產品</a>/<a href="milkshop.html">純乳系列</a>/<a href="detail.html">山羊奶(500ml)</a>
         </div>
         <div class="info">
-            <div class="smallimg">
-               <img src="p/4288453_s.jpg" alt="">
-               <img src="p/3656034_s.jpg" alt="">
-               <img src="p/5008692_s.jpg" alt="">
-               <img src="p/3651874_s.jpg" alt="">
+            <div class="pic">
+                <div class="smallimg">
+                    <img src="p/4288453_s.jpg" alt="">
+                    <img src="p/3656034_s.jpg" alt="">
+                    <img src="p/5008692_s.jpg" alt="">
+                    <img src="p/3651874_s.jpg" alt="">
+                </div>
+                <div class="mainimg">
+                <img src="p/4288453_s.jpg" alt="" id="mainimg"></div>
             </div>
-            <div class="mainimg">
-            <img src="p/4288453_s.jpg" alt="" id="mainimg"></div>
             <div class="txt">
                 <h2>山羊奶(500ml)</h2>
                 <p>成分:100%山羊奶<br>
@@ -78,9 +97,9 @@
                 </ul>
                 <div class="numbtn">
                     <p>數量</p>
-                    <button><i class="fa-solid fa-minus"></i></button>
-                    <input type="text">
-                    <button><i class="fa-solid fa-plus"></i></button> 
+                    <i class="fa-solid fa-minus"></i>
+                    <input type="number" value="1" id="num">
+                    <i class="fa-solid fa-plus"></i>
                 </div>
                 <div class="btnchangecolor">
                     <a class="btnchangecolortxt" href=""><i class="fa-solid fa-cart-shopping"></i>加入購物車</a>
@@ -143,6 +162,8 @@
         </div>
         <p>本網站為緯育TibaMe【第85期】前端工程師專業技術養成班學員作品,僅供學習、展示之用途。</p>
     </footer>
+    <script src="js/common.js" defer="defer"></script>
+    <script src="js/shopslide.js" defer="defer"></script>
     <script>
     function showLarge(e){
     document.getElementById("mainimg").src = e.target.src;
@@ -154,6 +175,16 @@
     }
     }
     window.addEventListener("load", init, false);
+    let num = document.getElementById('num')
+    document.querySelector('.fa-plus').addEventListener('click',()=>{
+       num.value = parseInt(num.value) + 1; 
+    }) 
+    document.querySelector('.fa-minus').addEventListener('click',()=>{
+        if(num.value >1){
+          num.value = parseInt(num.value) - 1;  
+        }
+       
+    }) 
     </script>
 </body>
 </html>
