--- a/index.html
+++ b/index.html
@@ -75,13 +75,11 @@
             <li style="--i:5;"><a href="QA.html"><i class="fa-regular fa-circle-question"></i><p>常見問題</p></a></li>
         </div>
         <div class="monavbar">
-            <i class="fa-solid fa-bars" id="opennav"></i>
             <a href=""><i class="fa-solid fa-user"></i></a>
             <a href=""><i class="fa-solid fa-cart-shopping"></i></a>   
+            <i class="fa-solid fa-bars" id="opennav"></i>
         </div>
     </div>
-        
-
     <div class="bar">
         <div class="txt">
             <h1>羊桃觀光牧場</h1>
@@ -256,16 +254,16 @@
         <p>本網站為緯育TibaMe【第85期】前端工程師專業技術養成班學員作品,僅供學習、展示之用途。</p>
     </footer>
     <script src="js/common.js" defer="defer"></script>
+    <script src="js/shopslide.js" defer="defer"></script>
     <script>
+    let wrap = document.querySelector('.wrap')
     let paralogo = document.getElementById('paralogo');
     let floor = document.getElementById('floor');
     let moun = document.getElementById('moun');
     let cl= document.getElementById('cl');
     let cr = document.getElementById('cr');
-
     window.addEventListener("scroll",()=>{
         let value = window.scrollY;
-
         paralogo.style.marginTop = value*1.3 + 'px'
         moun.style.bottom = value*-0.2 + 'px'
         cl.style.left = value* -0.5 + 'px'
@@ -273,7 +271,7 @@
 
     })
     window.addEventListener("mousemove",(e)=>{
-        let x = (window.innerWidth - e.pageX)/100;
+        let x = (window.innerWidth - e.pageX)/98;
         let y = (window.innerHeight- e.pageY)/100;
 
         cl.style.transform = `translate(${x}px , ${y}px)`;
