--- a/milkshop.html
+++ b/milkshop.html
@@ -42,6 +42,23 @@
             <li class="list"><a href="">登入</a></li>
         </ul>
     </nav>
+    <div class="monav">
+        <div class="momenu" id="momenu">
+            <div class="center">
+            <a href="index.html" ><img src="logo/logo.png" alt="logo" id="monavlogo"></a></div>
+            <li style="--i:0;" id="close"><i class="fa-solid fa-circle-xmark"></i></li>
+            <li style="--i:1;"><a href="new.html"><i class="fa-regular fa-newspaper"></i><p>最新消息</p></a></li>
+            <li style="--i:2;"><a href="about.html"><i class="fa-solid fa-map-location-dot"></i><p>園區導覽</p></a></li>
+            <li style="--i:3;"><a href="activity.html"><i class="fa-solid fa-cow"></i><p>牧場體驗</p></a></li>
+            <li style="--i:4;"><a href="shop.html"><i class="fa-solid fa-store"></i><p>小農產品</p></a></li>
+            <li style="--i:5;"><a href="QA.html"><i class="fa-regular fa-circle-question"></i><p>常見問題</p></a></li>
+        </div>
+        <div class="monavbar">
+            <i class="fa-solid fa-bars" id="opennav"></i>
+            <a href=""><i class="fa-solid fa-user"></i></a>
+            <a href=""><i class="fa-solid fa-cart-shopping"></i></a>   
+        </div>
+    </div>
     <div class="pagebar">
         <img src="bar\milkbar1.png" alt="milkshop">
         <h1 class="pagetitle">純乳系列</h1>
@@ -65,9 +82,15 @@
                 <a class="btnchangecolortxt" href="">文創商品</a></div>
             <div class="search">
                 <input type="search" placeholder="搜尋...">
-                <button><i class="fa-solid fa-magnifying-glass"></i></button>
+                <button id="searchbutton"><i class="fa-solid fa-magnifying-glass" id="searchbutton2"></i></button>
             </div>
         </aside>
+        <div class="searchbox" tabindex="0">
+            <i class="fa-solid fa-circle-xmark"></i>
+            <input type="search" placeholder="搜尋...">
+            <button><i class="fa-solid fa-magnifying-glass"></i></button>
+            <p>熱門搜尋:<a href="detail.html">羊奶</a><a href="detail.html">香草冰淇淋</a><a href="detail.html">冰淇淋馬卡龍</a></p>
+        </div>
         <section>
             <div class="item">
                 <a href="detail.html">
@@ -174,5 +197,31 @@
         </div>
         <p>本網站為緯育TibaMe【第85期】前端工程師專業技術養成班學員作品,僅供學習、展示之用途。</p>
     </footer>
+    <script src="js/common.js" defer="defer"></script>
+    <script src="js/shopslide.js" defer="defer"></script>
+    <script>
+        let searchbutton = document.getElementById('searchbutton');
+        let searchbox = document.querySelector('.searchbox');
+        let xmark = document.querySelector('.fa-circle-xmark');
+        let searchbutton2 = document.getElementById('searchbutton2');
+        function open(){
+            searchbox.style.transform = 'translateX(-100%)'
+        }
+        function close(){
+            searchbox.style = 'left: 100%;'
+        }
+
+        searchbutton.addEventListener("click",open)
+        searchbutton2.addEventListener("click",open)
+        
+        xmark.addEventListener("click",close);
+
+        window.addEventListener("click", function (event) {
+            if (!searchbox.contains(event.target) && event.target != searchbutton && event.target != searchbutton2) {
+                close();
+            }
+        });
+
+    </script>
 </body>
 </html>
