--- a/about.html
+++ b/about.html
@@ -114,13 +114,13 @@
     <div class="map">
         <div class="btngroup">
             <label class="btnchangecolor" for="ground"><span class="btnchangecolortxt" ><i class="fa-solid fa-flag"></i>羊羊廣場</span></label>
-            <label for="house" class="btnchangecolor"><span class="btnchangecolortxt" href=""><i class="fa-solid fa-house"></i>山羊羊舍</span></label>
-            <label for="diy" class="btnchangecolor"><span class="btnchangecolortxt" href=""><i class="fa-solid fa-mitten"></i>手作教室</span></label>
-            <label for="kit" class="btnchangecolor"><span class="btnchangecolortxt" href=""><i class="fa-solid fa-fire-burner"></i>手作廚房</span></label>
-            <label for="cheese" class="btnchangecolor"><span class="btnchangecolortxt" href=""><i class="fa-solid fa-cheese"></i>起司研究室</span></label>
-            <label for="bq" class="btnchangecolor"><span class="btnchangecolortxt" href=""><i class="fa-solid fa-campground"></i>烤肉帳篷</span></label>
-            <label for="market" class="btnchangecolor"><span class="btnchangecolortxt" href=""><i class="fa-solid fa-store"></i>小農市集</span></label>
-            <label for="center" class="btnchangecolor"><span class="btnchangecolortxt" href=""><i class="fa-solid fa-circle-question"></i>遊客中心</span></label>
+            <label for="house" class="btnchangecolor"><span class="btnchangecolortxt" ><i class="fa-solid fa-house"></i>山羊羊舍</span></label>
+            <label for="diy" class="btnchangecolor"><span class="btnchangecolortxt" ><i class="fa-solid fa-cheese"></i>起司研究室</span></label>
+            <label for="kit" class="btnchangecolor"><span class="btnchangecolortxt" ><i class="fa-solid fa-mitten"></i>手作教室</span></label>
+            <label for="cheese" class="btnchangecolor"><span class="btnchangecolortxt" ><i class="fa-solid fa-fire-burner"></i>手作廚房</span></label>
+            <label for="bq" class="btnchangecolor"><span class="btnchangecolortxt" ><i class="fa-solid fa-campground"></i>烤肉帳篷</span></label>
+            <label for="market" class="btnchangecolor"><span class="btnchangecolortxt" ><i class="fa-solid fa-store"></i>小農市集</span></label>
+            <label for="center" class="btnchangecolor"><span class="btnchangecolortxt" ><i class="fa-solid fa-circle-question"></i>遊客中心</span></label>
         </div>
         <div class="pin">
             <img src="map\map.png" alt="">
@@ -135,10 +135,10 @@
         </div>
     </div>
     <div class="cloudtitle" id="history"><h2>園區沿革</h2></div>
-    <!-- <div class="history col-10">
+    <div class="history">
         <div class="block ">
             <img class="logo" src="logo\logorow.png" alt="">
-            <img class="col-12" src="animal/78414_m.jpg">
+            <img class="top" src="animal/78414_m.jpg">
             <div class="txt">
             <h3>探索自然</h3><p>
             與動物共舞的奇妙旅程<br>——迎向我們的觀光牧場！<br>
@@ -146,29 +146,29 @@
 
         </div>
         <div class="block">
-            <img class="col-7" src="activity/26040835_m.jpg">
+            <img class="mid" src="activity\cook.jpg">
             <div class="txt">
             <h3>精彩的活動</h3><p>
             您可以參加精心設計的導覽，了解動物的生活習性和飼養秘密；享受美味的農場美食，品嚐新鮮的乳製品和農產品。<br>
-            無論您是家庭旅遊、朋友聚會，或是單獨一人的冒險，都將為您打造一段難忘的經歷。</p></div>
+            家庭旅遊、朋友聚會，或是單獨一人的冒險，都將為您打造一段難忘的經歷。</p></div>
         </div>
-        <div class="block"><img src="">
-            <img class="col-6" src="activity\cook.jpg" alt="">
+        <div class="block">
+            <img class="but" src="activity\27237664_s.jpg" alt="">
             <div class="txt">
                 <h3>期待著您的光臨</h3>
                 <p>加入我們，開啟一段與動物、大自然和自己連結的奇妙旅程。<br>我們引以為傲的小農產品，結合了自然的恩賜和可追溯的品質。<br>每一口都蘊含堅守初衷的承諾。</p>
             </div>
         </div>
-    </div> -->
+    </div>
     <div class="cloudtitle" id="story"><h2>牧場的一天</h2></div>
-    <div class="story col-10" id="story">
-        <div class="time col-3">
-            <a href="#feed"><img src="story\feed.png" alt=""><p>餵食時間</p></a>
-            <a href="#milk"><img src="story\milk.png" alt=""><p>擠奶時間</p></a>
-            <a href="#clean"><img src="story\clean.png" alt=""><p>打掃時間</p></a>
-            <a href="#home"><img src="story\sunset.png" alt=""><p>回家時間</p></a>
+    <div class="story" id="story">
+        <div class="time">
+            <button><img src="story\feed.png" alt=""><p>餵食時間</p></button>
+            <button><img src="story\milk.png" alt=""><p>擠奶時間</p></button>
+            <button><img src="story\clean.png" alt=""><p>打掃時間</p></button>
+            <button><img src="story\sunset.png" alt=""><p>回家時間</p></button>
         </div>
-        <div class="window col-9">
+        <div class="window">
             <div class="page" id="feed">
                 <h3>餵食時間</h3>
                 <div class="txt">
@@ -194,7 +194,6 @@
                 </div>
             <div class="page" id="home">
                 <h3>回家時間</h3>
-                
                 <div class="txt">
                 <img src="story\AdobeStock_603404563_Preview.jpeg" alt="">
                 <p>隨著傍晚的來臨，牧場進入一天的尾聲。日落時分，農場和動物進入休息狀態，準備迎接新的一天。<br><br>
@@ -247,7 +246,34 @@
     </footer>
     <script src="js/common.js" defer="defer"></script>
     <script>
+        let btn = [...document.querySelectorAll('.time button')];
+        let page = document.querySelectorAll('.page')
+        let pagewidth = nowwidth();
+        let win = document.querySelector('.window');
+        let index = 0;
 
+        function nowwidth(){
+            return document.querySelector('.window').offsetWidth;
+        }
+        window.addEventListener("resize", function () {
+            pagewidth = nowwidth();
+            win.scrollLeft = pagewidth*index;
+        });
+        btn[0].classList.add('click');
+        btn.forEach(function(b){
+            b.addEventListener('click',()=>{
+                index = btn.indexOf(b);
+                win.scrollLeft = pagewidth*index; 
+            btn.forEach((d)=>{
+                if(btn.indexOf(d) != btn.indexOf(b)){
+                    d.classList.remove('click')
+                }else{
+                    d.classList.add('click')
+                }
+            })
+            })
+            
+        })
     </script>
 </body>
 </html>
