--- a/milkshop.html
+++ b/milkshop.html
@@ -154,17 +154,22 @@
             </div>
         </section>
     </main>
-    <div class="product">
-        <div class="object"><a href=""><img src="p\cookie.png"></a></div>
-        <div class="object"><a href=""><img src="p\milk2.png"></a></div>
-        <div class="object"><a href=""><img src="p\macaro.png"></a><h4>冰淇淋馬卡龍</h4></div>
-        <div class="object"><a href=""><img src="p/milk.png"></a></div>
-        <div class="object"><a href=""><img src="p\mocha.png"></a></div>
-        <div class="btn ">
-            <button><i class="fa-solid fa-arrow-left"></i></button>
-            <button><i class="fa-solid fa-arrow-right"></i></button>
+    <div class="productwrap">
+        <div class="product">
+            <div class="object"><a href=""><img src="p/cookie.png" draggable="false"><p>羊奶餅乾</p></a></div>
+            <div class="object"><a href=""><img src="p/milk2.png" draggable="false"><p>咖啡羊奶</p></a></div>
+            <div class="object"><a href=""><img src="p/macaro.png" draggable="false"><p>冰淇淋馬卡龍</p></a></div>
+            <div class="object"><a href=""><img src="p/milk.png" draggable="false"><p>羊奶</p></a></div>
+            <div class="object"><a href=""><img src="p/mocha.png" draggable="false"><p>抹茶冰淇淋</p></a></div>
+            <div class="object"><a href=""><img src="p/pudding.png" draggable="false"><p>羊奶布丁</p></a></div>
+            <div class="object"><a href=""><img src="p/manjyu.png" draggable="false"><p>羊奶饅頭</p></a></div>
+            <div class="object"><a href=""><img src="p/manjyu2.png" draggable="false"><p>日式饅頭</p></a></div>
+        </div>    
+        <div class="btn">
+            <button id="left"><i class="fa-solid fa-arrow-left"></i></button>
+            <button id="right"><i class="fa-solid fa-arrow-right" ></i></button>
         </div>
-    </div>
+        </div>
     <div class="server">
         <input type="checkbox" id="bot">
         <label for="bot">客服羊羊</label>
