--- a/index.html
+++ b/index.html
@@ -16,8 +16,6 @@
             <li ><a href="about.html">園區介紹</a></li>
             <li ><a href="activity.html">牧場體驗</a></li>
             <li ><a href="shop.html">小農產品</a></li>
-            <li ><a href="QA.html">常見問題</a></li>
-            <li ><a href="">登入</a></li>
         </ul>
         <div class="para">
             <img src="back\cloudl.png" id="cl" alt="">
@@ -101,16 +99,17 @@
     <main>
         <div class="sum">
             <div class="item">
-                <a href=""><p></i>導覽</i></p>
+                <a href="">
+                    <p><s>園區</s>導覽</p>
                     <span><img src="activity/4849375_s.jpg"></span>
                 </a>
             </div>
             <div class="item">
-                <a href=""><p></i>體驗</i></p>
+                <a href=""><p><s>牧場</s>體驗</p>
                 <span><img src="activity/26040835_m.jpg"></span></a>
             </div>
             <div class="item">
-                <a href=""><p></i>購物</i></p>
+                <a href=""><p><s>小農</s>產品</p>
                     <span><img src="p/shopbar.jpg"></span></a>
             </div>
         </div>
@@ -119,6 +118,7 @@
             <div class="cloudtitle"><h2>最新消息</h2></div>
             <div class="ground">
                 <div class="sheeprow">
+                    <div class="view">
                     <div class="newcol">
                         <a href=""><img src="item\new1.png"></a>
                         <a href=""><h3>烤肉週所有方案9折!</h3></a>
@@ -130,14 +130,20 @@
                     <div class="newcol">
                         <a href=""><img src="item\new1.png"></a>
                         <a href=""><h3>烤肉週所有方案9折!</h3></a>
-                    </div>  
+                    </div>
+                    <div class="newcol">
+                        <a href=""><img src="item\new2.png"></a>
+                        <a href=""><h3>牧場採摘季：現在是採摘的最佳時機！帶上朋友和家人，一起來採摘新鮮的水果和蔬菜，體驗農場樂趣！</h3></a>
+                    </div>
+                    <div class="newcol">
+                        <a href=""><img src="item\new1.png"></a>
+                        <a href=""><h3>烤肉週所有方案9折!</h3></a>
+                    </div>
+                    </div>
                 </div>
                 <div class="btngroup">
                     <div class="btn">
                         <button><i class="fa-solid fa-arrow-left"></i></button>
-                        <i class="fa-solid fa-star"></i>
-                        <i class="fa-solid fa-star"></i>
-                        <i class="fa-solid fa-star"></i>
                         <button><i class="fa-solid fa-arrow-right"></i></button>
                     </div>
                     <div class="more  btnchangecolor">
@@ -150,14 +156,14 @@
         <div class="activity" id="activity">
             <div class="cloudtitle"><h2>牧場體驗</h2></div>
             <div class="act">
-                <div class="card col-3">
-                     <a href=""><img src="ready\a1.jpg"><h3>動物互動</h3></a>
+                <div class="card">
+                     <a href=""><img src="activity\25115618_s.jpg"><h3>動物互動</h3></a>
                 </div>
-                <div class="card col-3">
-                    <a href=""><img src="ready\a2.jpg">
+                <div class="card">
+                    <a href=""><img src="bar\cartbar.jpg">
                     <h3>手作工坊</h3></a>
                 </div>
-                <div class="card col-3">
+                <div class="card">
                     <a href=""><img src="ready\a3.jpg">
                     <h3>烤肉方案</h3></a>
                 </div>
@@ -170,15 +176,15 @@
         <div class="shop" id="shop">
             <div class="sum">
                 <div class="item">
-                    <a href=""><p>純乳</p>
+                    <a href=""><p>純乳<s>系列</s></p>
                     <span><img src="p/shopbar.jpg"></span></a>
                 </div>
                 <div class="item">
-                    <a href=""><p>零食</p>
+                    <a href=""><p><s>點心</s>零食</p>
                     <span><img src="p\23955063_s.jpg"></span></a>
                 </div>
                 <div class="item">
-                    <a href=""><p>文創</p>
+                    <a href=""><p>文創<s>商品</s></p>
                     <span><img src="p\24846460_s.jpg"></span></a>
                 </div>
             </div>
@@ -254,34 +260,8 @@
         <p>本網站為緯育TibaMe【第85期】前端工程師專業技術養成班學員作品,僅供學習、展示之用途。</p>
     </footer>
     <script src="js/common.js" defer="defer"></script>
+    <script src="js/index.js" defer="defer"></script>
     <script src="js/shopslide.js" defer="defer"></script>
-    <script>
-    let wrap = document.querySelector('.wrap')
-    let paralogo = document.getElementById('paralogo');
-    let floor = document.getElementById('floor');
-    let moun = document.getElementById('moun');
-    let cl= document.getElementById('cl');
-    let cr = document.getElementById('cr');
-    window.addEventListener("scroll",()=>{
-        let value = window.scrollY;
-        paralogo.style.marginTop = value*1.3 + 'px'
-        moun.style.bottom = value*-0.2 + 'px'
-        cl.style.left = value* -0.5 + 'px'
-        cr.style.right = value* -0.5 + 'px'
 
-    })
-    window.addEventListener("mousemove",(e)=>{
-        let x = (window.innerWidth - e.pageX)/98;
-        let y = (window.innerHeight- e.pageY)/100;
-
-        cl.style.transform = `translate(${x}px , ${y}px)`;
-        cr.style.transform = `translate(-${x}px , -${y}px)`
-    })
-    window.addEventListener("scroll",()=>{
-        if(document.documentElement.scrollTop>30 ){
-        document.querySelector('.fa-angles-down').style.opacity = '0'    
-        }else{document.querySelector('.fa-angles-down').style.opacity = '1' }
-    })
-    </script>
 </body>
 </html>
