--- a/activity.html
+++ b/activity.html
@@ -40,8 +40,8 @@
             </li>
             <li class="list"><a href="QA.html">常見問題</a></li>
             <li class="list"><a href="">登入</a></li>
-        </ul>
-    </nav>
+        </ul> 
+    </nav>   
     <div class="monav">
         <div class="momenu" id="momenu">
             <div class="center">
@@ -54,9 +54,9 @@
             <li style="--i:5;"><a href="QA.html"><i class="fa-regular fa-circle-question"></i><p>常見問題</p></a></li>
         </div>
         <div class="monavbar">
-            <i class="fa-solid fa-bars" id="opennav"></i>
             <a href=""><i class="fa-solid fa-user"></i></a>
             <a href=""><i class="fa-solid fa-cart-shopping"></i></a>   
+            <i class="fa-solid fa-bars" id="opennav"></i>
         </div>
     </div>
     <main>
@@ -294,5 +294,6 @@
     </footer>
     <script src="js/common.js" defer="defer"></script>
     <script src="js/actsilder.js" defer="defer"></script>
+    <script src="js/nav.js" defer="defer"></script>
 </body>
 </html>
