--- a/detail.html
+++ b/detail.html
@@ -54,9 +54,9 @@
             <li style="--i:5;"><a href="QA.html"><i class="fa-regular fa-circle-question"></i><p>常見問題</p></a></li>
         </div>
         <div class="monavbar">
-            <i class="fa-solid fa-bars" id="opennav"></i>
             <a href=""><i class="fa-solid fa-user"></i></a>
             <a href=""><i class="fa-solid fa-cart-shopping"></i></a>   
+            <i class="fa-solid fa-bars" id="opennav"></i>
         </div>
     </div>
     <div class="pagebar">
@@ -169,6 +169,7 @@
     </footer>
     <script src="js/common.js" defer="defer"></script>
     <script src="js/shopslide.js" defer="defer"></script>
+    <script src="js/nav.js" defer="defer"></script>
     <script>
     function showLarge(e){
     document.getElementById("mainimg").src = e.target.src;
