--- a/new.html
+++ b/new.html
@@ -54,9 +54,9 @@
             <li style="--i:5;"><a href="QA.html"><i class="fa-regular fa-circle-question"></i><p>常見問題</p></a></li>
         </div>
         <div class="monavbar">
-            <i class="fa-solid fa-bars" id="opennav"></i>
             <a href=""><i class="fa-solid fa-user"></i></a>
             <a href=""><i class="fa-solid fa-cart-shopping"></i></a>   
+            <i class="fa-solid fa-bars" id="opennav"></i>
         </div>
     </div>
     <div class="pagebar">
@@ -140,5 +140,6 @@
         <p>本網站為緯育TibaMe【第85期】前端工程師專業技術養成班學員作品,僅供學習、展示之用途。</p>
     </footer>
     <script src="js/common.js" defer="defer"></script>
+    <script src="js/nav.js" defer="defer"></script>
 </body>
 </html>
