--- a/shop.html
+++ b/shop.html
@@ -147,5 +147,6 @@
         </footer>
         <script src="js/common.js"></script>
         <script src="js/shopslide.js" defer="defer"></script>
+        <script src="js/nav.js" defer="defer"></script>
 </body>
 </html>
